refactor: 스트림 API 최적화 및 AI 결과 처리 로직 개선 (#48)
- AiTaskPersistenceAdapter: Collectors.toList()를 Stream.toList()로 대체하여
  코드 간소화 및 가독성을 향상시켰습니다.
  또한 불필요한 import 문(ArrayList, Collectors)을 제거했습니다.

- AiResultRetrievalService: AI 결과 생성 시 숙련도를 표시할 때,
  aiTask.proficiency() 대신 aiTask.proficiency().getProficiency()를
  사용하여 실제 숙련도 문자열 값을 명확하게 반영하도록 수정했습니다.